infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atc-application
spec:
  selector:
    app: atc-application
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
