infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atc-application-ingress
spec:
  rules:
  - host: sample-atc-domain.com 
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: atc-application
            port:
              number: 80
